Added about page and navigation

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -35,6 +35,7 @@
   </head>
 
   <body>
+    <header><a href="{{ '/' | url }}">For you</a> | <a href="{{ '/about' | url }}">About this page for you</a></header>
     {{ content | safe }}
   </body>
 </html>
