--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -24,12 +24,48 @@
       }
 
       div.container {
-        width: 400px;
+        width: 800px;
         margin: 0 auto;
+      }
+
+      img {
+        display: block;
+        height: 200px;
+        width: 200px;
+        object-fit: cover;
       }
 
       .honeypot {
         font-size: 4rem;
+        margin-bottom: 4rem;
+      }
+
+      .news-list {
+        width: 100%;
+	      list-style: none;
+	      display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+	      align-items: center;
+        margin: 0;
+	      padding: 0;
+      }
+
+      .news-list__item {
+        width: 100%;
+        display: flex;
+        gap: 8px;
+        align-items: center;
+        margin-bottom: 8px;
+      }
+
+      .news-list__item:last-child() {
+        margin-bottom: 0;
+      }
+      
+      .news-list__item--link:hover {
+        color: #dddcdd;
+        opacity: 1;
       }
     </style>
   </head>
