Third GitHub workflow attempt

--- a/src/index.njk
+++ b/src/index.njk
@@ -23,4 +23,4 @@ layout: base.njk
     {% endfor %}
     </ul>
 </div>
-<script src="/js/vibe.js"></script>
+<script src="{{ '/js/vibe.js' | url }}"></script>
