--- a/src/index.njk
+++ b/src/index.njk
@@ -10,15 +10,12 @@ layout: base.njk
       <span role="img" aria-label="honey pot" aria-hidden="false">🍯</span>
     </div>
 
-    <div class="news-data"></div>
+    <div class="country-data"></div>
+    <h2>News for you</h2>
     <ul class="news-list">
-    {% for article in news.articles %}
-      <li class="news-list__item">
-        <img src="{{article.urlToImage}}" alt="{{article.title}}" class="news-list__item--image" />
-        <h2 class="news-list__item--title" >
-          <a href="{{article.url}}" class="news-list__item--link" >{{ article.title }}</a>
-        </h2>
-        <span class="news-list__item--meta" >{{article.source.name}} | <time>{{article.publishedAt}}</time></span>
+    {% for item in news %}
+      <li class="country-list__item">
+          <a href="{{ item.country }}" class="country-list__item--link" >{{ item.country }}</a>
       </li>
     {% endfor %}
     </ul>
